--- a/ProjectTwo/ProjectTwo/Base.lproj/Main.storyboard
+++ b/ProjectTwo/ProjectTwo/Base.lproj/Main.storyboard
@@ -17,90 +17,90 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flatiron" translatesAutoresizingMaskIntoConstraints="NO" id="wLr-iQ-LMA">
-                                <rect key="frame" x="0.0" y="357" width="600" height="294"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="me" translatesAutoresizingMaskIntoConstraints="NO" id="VV6-FN-89K">
+                                <rect key="frame" x="226" y="79" width="148" height="148"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="148" id="T9Y-Ai-Gtg"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLE-0x-R0H">
-                                <rect key="frame" x="239" y="423" width="124" height="33"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cnw-YS-FgF">
+                                <rect key="frame" x="227" y="450" width="146" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="uxI-gv-8ah"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Places I've Been">
-                                    <color key="titleColor" red="0.23137254900000001" green="0.6588235294" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.23137254901960785" green="0.6588235294117647" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
-                                <connections>
-                                    <segue destination="tfO-70-BXF" kind="show" id="SoD-qI-lL0"/>
-                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hT-nN-fbx">
-                                <rect key="frame" x="220" y="385" width="161" height="33"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tj3-RE-iLo">
+                                <rect key="frame" x="206" y="409" width="190" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="RLx-2O-Qnp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Skills and Languages">
-                                    <color key="titleColor" red="0.23137254900000001" green="0.6588235294" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.23137254901960785" green="0.6588235294117647" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQS-ob-8ht">
-                                <rect key="frame" x="262" y="309" width="77" height="33"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Education">
-                                    <color key="titleColor" red="0.23137254900000001" green="0.6588235294" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00Y-ai-s7T">
+                                <rect key="frame" x="250" y="289" width="100" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="BKG-C8-yDg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Experience">
+                                    <color key="titleColor" red="0.23137254901960785" green="0.6588235294117647" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pbx-6f-UMr">
-                                <rect key="frame" x="263" y="233" width="75" height="33"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="About Me">
-                                    <color key="titleColor" red="0.23137254900000001" green="0.6588235294" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="af9-Hv-Hl7">
-                                <rect key="frame" x="215" y="347" width="170" height="33"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mLD-2h-3id">
+                                <rect key="frame" x="201" y="368" width="199" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="rtU-sg-MNG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Activities and Projects">
                                     <color key="titleColor" red="0.23137254901960785" green="0.6588235294117647" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1AS-Xh-gLa">
-                                <rect key="frame" x="258" y="271" width="85" height="33"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Experience">
-                                    <color key="titleColor" red="0.23137254900000001" green="0.6588235294" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tks-7J-CwP">
+                                <rect key="frame" x="256" y="330" width="90" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="aNF-ug-CYq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Education">
+                                    <color key="titleColor" red="0.23137254901960785" green="0.6588235294117647" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="me" translatesAutoresizingMaskIntoConstraints="NO" id="3aH-p2-hxk">
-                                <rect key="frame" x="231" y="71" width="141" height="141"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsM-cc-7zt">
+                                <rect key="frame" x="256" y="248" width="88" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="141" id="5Gt-bO-bhr"/>
+                                    <constraint firstAttribute="height" constant="36" id="o0k-ac-NLP"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jessie Albarian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay5-hG-J1A">
-                                <rect key="frame" x="53" y="233" width="161" height="27"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="About Me">
+                                    <color key="titleColor" red="0.23137254901960785" green="0.6588235294117647" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.015686274509803921" green="0.019607843137254902" blue="0.035294117647058823" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="3aH-p2-hxk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="7" id="86G-D2-HgB"/>
-                            <constraint firstItem="Ay5-hG-J1A" firstAttribute="leading" secondItem="7hT-nN-fbx" secondAttribute="leading" constant="-167" id="9nS-Ve-qve"/>
-                            <constraint firstItem="7hT-nN-fbx" firstAttribute="centerX" secondItem="wLr-iQ-LMA" secondAttribute="centerX" id="AEs-OH-kPb"/>
-                            <constraint firstItem="3aH-p2-hxk" firstAttribute="top" secondItem="Ay5-hG-J1A" secondAttribute="bottom" constant="-189" id="Gnt-kF-56T"/>
-                            <constraint firstItem="pbx-6f-UMr" firstAttribute="top" secondItem="3aH-p2-hxk" secondAttribute="bottom" constant="21" id="PtE-7T-vCJ"/>
-                            <constraint firstItem="7hT-nN-fbx" firstAttribute="centerX" secondItem="tLE-0x-R0H" secondAttribute="centerX" id="Rh6-3f-dNR"/>
-                            <constraint firstItem="gQS-ob-8ht" firstAttribute="top" secondItem="1AS-Xh-gLa" secondAttribute="bottom" constant="5" id="XJA-TE-jxx"/>
-                            <constraint firstItem="1AS-Xh-gLa" firstAttribute="centerX" secondItem="gQS-ob-8ht" secondAttribute="centerX" id="ZHT-j2-7cs"/>
-                            <constraint firstItem="7hT-nN-fbx" firstAttribute="top" secondItem="af9-Hv-Hl7" secondAttribute="bottom" constant="5" id="aUx-46-oIS"/>
-                            <constraint firstItem="wLr-iQ-LMA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bwj-xN-ahg"/>
-                            <constraint firstItem="tLE-0x-R0H" firstAttribute="top" secondItem="7hT-nN-fbx" secondAttribute="bottom" constant="5" id="ekN-6s-4hb"/>
-                            <constraint firstItem="wLr-iQ-LMA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="293" id="gMn-fa-aYh"/>
-                            <constraint firstItem="1AS-Xh-gLa" firstAttribute="top" secondItem="pbx-6f-UMr" secondAttribute="bottom" constant="5" id="gmu-jH-A88"/>
-                            <constraint firstItem="af9-Hv-Hl7" firstAttribute="centerX" secondItem="7hT-nN-fbx" secondAttribute="centerX" id="gsi-WK-K3U"/>
-                            <constraint firstItem="gQS-ob-8ht" firstAttribute="centerX" secondItem="af9-Hv-Hl7" secondAttribute="centerX" id="lP5-6S-W0y"/>
-                            <constraint firstAttribute="trailing" secondItem="wLr-iQ-LMA" secondAttribute="trailing" id="n0x-Zq-cLs"/>
-                            <constraint firstItem="wLr-iQ-LMA" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="51" id="p7n-s7-guK"/>
-                            <constraint firstItem="af9-Hv-Hl7" firstAttribute="top" secondItem="gQS-ob-8ht" secondAttribute="bottom" constant="5" id="qUK-ZO-Er4"/>
-                            <constraint firstItem="3aH-p2-hxk" firstAttribute="centerX" secondItem="tLE-0x-R0H" secondAttribute="centerX" id="wMN-np-0LK"/>
-                            <constraint firstItem="pbx-6f-UMr" firstAttribute="centerX" secondItem="1AS-Xh-gLa" secondAttribute="centerX" id="xOQ-zw-nrO"/>
-                            <constraint firstItem="pbx-6f-UMr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="169" id="zTx-sT-FnY"/>
+                            <constraint firstItem="xsM-cc-7zt" firstAttribute="leading" secondItem="tks-7J-CwP" secondAttribute="leading" id="0Fd-c3-JKJ"/>
+                            <constraint firstItem="00Y-ai-s7T" firstAttribute="top" secondItem="xsM-cc-7zt" secondAttribute="bottom" constant="5" id="37h-Nn-6v1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="cnw-YS-FgF" secondAttribute="bottom" constant="114" id="3cR-7X-9F8"/>
+                            <constraint firstItem="cnw-YS-FgF" firstAttribute="top" secondItem="tj3-RE-iLo" secondAttribute="bottom" constant="5" id="7j6-jJ-Hs0"/>
+                            <constraint firstItem="tj3-RE-iLo" firstAttribute="top" secondItem="mLD-2h-3id" secondAttribute="bottom" constant="5" id="QOR-QR-jLG"/>
+                            <constraint firstItem="tks-7J-CwP" firstAttribute="top" secondItem="00Y-ai-s7T" secondAttribute="bottom" constant="5" id="RPY-Ej-wCW"/>
+                            <constraint firstItem="mLD-2h-3id" firstAttribute="centerX" secondItem="tj3-RE-iLo" secondAttribute="centerX" id="YJI-9u-Edo"/>
+                            <constraint firstItem="xsM-cc-7zt" firstAttribute="top" secondItem="VV6-FN-89K" secondAttribute="bottom" constant="21" id="cs9-92-Qoq"/>
+                            <constraint firstItem="tks-7J-CwP" firstAttribute="centerX" secondItem="mLD-2h-3id" secondAttribute="centerX" id="fzj-zx-XcN"/>
+                            <constraint firstItem="mLD-2h-3id" firstAttribute="top" secondItem="tks-7J-CwP" secondAttribute="bottom" constant="2" id="kRJ-01-BYU"/>
+                            <constraint firstItem="VV6-FN-89K" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="lNf-xL-Zzg"/>
+                            <constraint firstItem="mLD-2h-3id" firstAttribute="centerX" secondItem="cnw-YS-FgF" secondAttribute="centerX" id="o3W-MS-dwZ"/>
+                            <constraint firstItem="xsM-cc-7zt" firstAttribute="centerX" secondItem="00Y-ai-s7T" secondAttribute="centerX" id="oVg-tO-VMT"/>
+                            <constraint firstItem="VV6-FN-89K" firstAttribute="centerX" secondItem="xsM-cc-7zt" secondAttribute="centerX" id="pQk-bL-gJf"/>
+                            <constraint firstItem="VV6-FN-89K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pUt-VR-7YF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Jessie Albarian" id="0tD-Zg-2a4"/>
@@ -291,7 +291,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="flatiron" width="800" height="400"/>
         <image name="me" width="700" height="700"/>
     </resources>
 </document>
